--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -9,6 +9,6 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
       - name: Run App
-        run: ./start.sh
+        run: supervisord
       - name: Run tests
         run: pytest tests
