--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ pytest==7.3.1
 requests==2.29.0
 sniffio==1.3.0
 starlette==0.26.1
+supervisor==4.2.5
 tomli==2.0.1
 typing_extensions==4.5.0
 urllib3==1.26.15
