update supervisor conf

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -4,4 +4,4 @@ nodaemon=false
 [program:fastapi]
 command=zsh ./supervisor/commands/fastapi.sh
 autorestart=true
-stderr_logfile=./supervisor/logs/fastapi.log
+stderr_logfile=/var/log/fastapi.log
