--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -3,6 +3,7 @@ on: [push]
 jobs:
   test:
     runs-on: ubuntu-latest
+    container: ubuntu
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
