--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,7 +1,7 @@
 [supervisord]
-nodaemon=false
+nodaemon=true
 
 [program:fastapi]
-command=zsh ./supervisor/commands/fastapi.sh
+command=bash ./supervisor/commands/fastapi.sh
 autorestart=true
 stderr_logfile=/var/log/fastapi.log
