--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -12,4 +12,4 @@ jobs:
       - name: Run App
         run: supervisord
       - name: Run tests
-        run: pytest tests
+        run: python -m pytest
