--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -8,8 +8,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip3 install -r requirements.txt
       - name: Run App
         run: supervisord
       - name: Run tests
-        run: python -m pytest
+        run: python3 -m pytest
