update testing conf

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -6,10 +6,13 @@ jobs:
     container: ubuntu
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.11
       - name: Install dependencies
-        run: pip3 install -r requirements.txt
+        run: pip install -r requirements.txt
       - name: Run App
         run: supervisord
       - name: Run tests
-        run: python3 -m pytest
+        run: python -m pytest
