--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,23 @@ on:
   push:
     branches: ['main']
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.11      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Start app
+        run: docker-compose up --build
+      - name: Install deps
+        run: pip3 install -r requirements.txt
+      - name: Run tests
+        run: python3 -m pytest
+        
   build-and-push:
     runs-on: ubuntu-latest
     steps:
