--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Start app
-        run: docker-compose up --build
+        run: docker-compose up --build -d
       - name: Install deps
         run: pip3 install -r requirements.txt
       - name: Run tests
